Fix thumbnail display on desktop and file input on mobile

--- a/style.css
+++ b/style.css
@@ -627,6 +627,8 @@ input[type="file"]::-webkit-file-upload-button:hover {
 
 .photo-preview-container {
   flex: 0 0 150px;
+  min-width: 150px;
+  display: block;
 }
 
 .photo-preview {
@@ -640,12 +642,16 @@ input[type="file"]::-webkit-file-upload-button:hover {
   align-items: center;
   justify-content: center;
   position: relative;
+  min-height: 150px;
+  box-sizing: border-box;
 }
 
 .photo-preview img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
+  border-radius: 4px;
 }
 
 .photo-placeholder {
